@@ -1,2 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <stetic-interface>
+  <import>
+    <widget-library name="../bin/Debug/Monodoc.Editor.Gui.dll" />
+  </import>
 </stetic-interface>
